--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -42,7 +42,7 @@
 }
 .isSignedInSection{
     width: 350px;
-    margin: 0 auto;
+    margin: 22vh auto 22vh auto !important;
     padding: 30px;
     text-align: center;
     margin-top: 30px;
@@ -84,7 +84,6 @@
     cursor: pointer;
     width: 170px;
     margin-top: -32px;
-    float: right;
 }
 .signInTrueFalse:hover{
     text-decoration: underline;
